2009-02-16  Alexander Larsson  <alexl@redhat.com>

         Bug 546482 – Keep ownership when replacing files on sftp

        * daemon/gvfsbackendsftp.c:
	Try to copy ownership. If this fails revert to truncate
	and overwrite, unless make_backup is set.
	Ideally we should handle the backup case too, but that
	requires more code.

	Patch from Jesse van den Kieboom.

2009-02-16  Christian Kellner  <gicmo@gnome.org>

	Bug 546256 – Crash in g_vfs_get_file_for_uri()

	* client/httpuri.c: Make sure we never return a non-NULL 
	GVfsUriMountInfo with the path component set to NULL, since
	this leads to dead kittens.
	NB: This only fixes the symptom. The real problem is deep in
	the uri parsing logic.

2009-02-16  Christian Kellner  <gicmo@gnome.org>

	536305 – incorrect GError propagation in the htt

	* daemon/gvfsbackenddav.c: Convert soup errors to
	gio errors. Patch from Jesse van den Kieboom

2009-02-16  Alexander Larsson  <alexl@redhat.com>

	Bug 529349 – Redirects with username doesn't work

        * daemon/gvfsbackenddav.c: (redirect_handler):
	Copy username and password when redirecting.
	Patch from Mads Chr. Olesen

2009-02-16  Alexander Larsson  <alexl@redhat.com>

        Bug 566452 – Error when creating folder on webdav share

        * daemon/gvfsbackenddav.c:
        (redirect_handler):
	Don't intercept "201 Created" return as a redirection
	Patch from Mads Chr. Olesen

2009-02-13  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 570533 – use g_set_error_literal

	* daemon/gvfsbackendobexftp.c: (_push_single_file_helper):
	* daemon/gvfsbackendtrash.c: (trash_backend_get_file),
	(trash_backend_open_for_read), (trash_backend_delete),
	(trash_backend_pull):
	* daemon/trashlib/trashitem.c: (trash_item_delete):
	use g_set_error_literal() when appropriate.
	Patch by Christian Persch.

2009-02-13  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 531705 – Won't build with libarchive 1.3.1

	* configure.ac: check for archive_entry_filetype() instead of