@@ -1,5 +1,11 @@
 2009-02-16  Alexander Larsson  <alexl@redhat.com>
 
+	* daemon/gvfsbackendsftp.c (replace_create_temp_reply):
+	Return G_IO_ERROR_CANT_CREATE_BACKUP in the below case instead
+	of not copying the ownership.
+
+2009-02-16  Alexander Larsson  <alexl@redhat.com>
+
          Bug 546482 – Keep ownership when replacing files on sftp
 
         * daemon/gvfsbackendsftp.c:
